# SpringChatPy

./: logging.yaml  pyproject.toml  readme.txt
src/spring_chat_py/: __main__.py  verify_tool_descriptions.py
src/spring_chat_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/spring_chat_py/certificates/: __init__.py  certificates.json  certificates.py
src/spring_chat_py/designing_ai/: extract_designing_ai.py  extract_designing_ai2.py  extract_designing_ai3.py
src/spring_chat_py/embeddings/: chunks_extractor.py  embed_chunks.py  search.py  upsert_emebd_to_qdrant.py
src/spring_chat_py/extract/: pdf_outlines.py
