[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "spring_chat_py"
version = "0.1.0"
description = "Standard Python Project"
readme = "README.md"
authors = [
  {name = "Andreas Bucher", email = "ante.bucher@gmail.com"}
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}
